--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,14 @@ android {
         maxProcessCount 4
         javaMaxHeapSize "2g"
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
-def supportLibraryVersion = '25.3.1'
-def gcmVersion = '11.0.1'
+def supportLibraryVersion = '25.3.0'
+def gcmVersion = '11.4.2'
 
 dependencies {
 
@@ -41,17 +45,17 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
     compile "com.android.support:design:$supportLibraryVersion"
-    compile "com.android.support:support-annotations:$supportLibraryVersion"
+    compile 'com.android.support:support-annotations:27.0.0'
     compile "com.android.support:customtabs:$supportLibraryVersion"
     compile "com.android.support:percent:$supportLibraryVersion"
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.2'
     compile "com.google.android.gms:play-services-gcm:$gcmVersion"
-    compile 'com.google.guava:guava:20.0'
+    compile 'com.google.guava:guava:23.3-android'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    compile 'com.squareup.okhttp3:okhttp:3.7.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
@@ -64,7 +68,7 @@ dependencies {
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.robinhood.ticker:ticker:1.1.1'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.2'
     compile 'joda-time:joda-time:2.9.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     testCompile 'junit:junit:4.12'
