--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,22 +2,54 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 27
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "cenergy.central.com.powerbuy_store"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
     }
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
+//    }
+
     buildTypes {
-        release {
-            minifyEnabled false
+        debug {
+            resValue 'string', 'app_name', '\"PowerBuy Store-Dev\"'
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-DEBUG"
+            ext.alwaysUpdateBuildId = false
+        }
+        stage {
+            initWith debug
+            versionNameSuffix "-STAGE"
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
+            renderscriptOptimLevel 3
+            zipAlignEnabled true
+        }
+        release {
+            resValue 'string', 'app_name', '\"PowerBuy Store\"'
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
+            renderscriptOptimLevel 3
+            zipAlignEnabled true
         }
     }
 
@@ -31,8 +63,8 @@ android {
     }
 }
 
-def supportLibraryVersion = '25.3.0'
-def gcmVersion = '11.4.2'
+def supportLibraryVersion = '27.0.2'
+def gcmVersion = '11.6.2'
 
 dependencies {
 
@@ -40,37 +72,38 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
-    compile "com.android.support:cardview-v7:$supportLibraryVersion"
-    compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
-    compile "com.android.support:design:$supportLibraryVersion"
-    compile 'com.android.support:support-annotations:27.0.0'
-    compile "com.android.support:customtabs:$supportLibraryVersion"
-    compile "com.android.support:percent:$supportLibraryVersion"
-    compile 'com.android.support:multidex:1.0.2'
-    compile "com.google.android.gms:play-services-gcm:$gcmVersion"
-    compile 'com.google.guava:guava:23.3-android'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'jp.wasabeef:glide-transformations:2.0.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.squareup.okhttp3:okhttp:3.7.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.scottyab:secure-preferences-lib:0.1.4'
-    compile 'com.mcxiaoke.viewpagerindicator:library:2.4.1'
-    compile 'com.pacioianu.david:ink-page-indicator:1.2.0'
-    compile 'com.google.zxing:core:3.3.0'
-    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.robinhood.ticker:ticker:1.1.1'
-    compile 'com.android.support:multidex:1.0.2'
-    compile 'joda-time:joda-time:2.9.4'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+    implementation "com.android.support:cardview-v7:$supportLibraryVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
+    implementation "com.android.support:design:$supportLibraryVersion"
+    implementation 'com.android.support:support-annotations:27.0.0'
+    implementation "com.android.support:customtabs:$supportLibraryVersion"
+    implementation "com.android.support:percent:$supportLibraryVersion"
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation "com.google.android.gms:play-services-gcm:$gcmVersion"
+    implementation "com.google.android.gms:play-services-vision:$gcmVersion"
+    implementation 'com.google.guava:guava:23.3-android'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.scottyab:secure-preferences-lib:0.1.4'
+    implementation 'com.mcxiaoke.viewpagerindicator:library:2.4.1'
+    implementation 'com.pacioianu.david:ink-page-indicator:1.2.0'
+    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.github.ksoichiro:android-observablescrollview:1.6.0'
+    implementation 'com.jakewharton:butterknife:8.6.0'
+    implementation 'com.robinhood.ticker:ticker:1.1.1'
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'joda-time:joda-time:2.9.4'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     testCompile 'junit:junit:4.12'
 }
 
@@ -79,7 +112,7 @@ configurations.all {
         def requested = details.requested
         if (requested.group == 'com.android.support') {
             if (!requested.name.startsWith("multidex")) {
-                details.useVersion '25.3.0'
+                details.useVersion "$supportLibraryVersion"
             }
         }
     }
