--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'powerbuystore'
+            keyPassword 'powerbuy'
+            storeFile file('/Users/napabhat/Documents/Alias_PWB/powerbuy.jks')
+            storePassword 'powerbuy'
+        }
+    }
     compileSdkVersion 27
     buildToolsVersion '26.0.2'
     defaultConfig {
@@ -14,13 +22,6 @@ android {
 
         multiDexEnabled true
     }
-//    buildTypes {
-//        release {
-//            minifyEnabled false
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//        }
-//    }
-
     buildTypes {
         debug {
             resValue 'string', 'app_name', '\"PowerBuy Store-Dev\"'
@@ -41,6 +42,7 @@ android {
             zipAlignEnabled true
         }
         release {
+            signingConfig signingConfigs.config
             resValue 'string', 'app_name', '\"PowerBuy Store\"'
             minifyEnabled true
             shrinkResources true
@@ -50,14 +52,13 @@ android {
             renderscriptDebuggable false
             renderscriptOptimLevel 3
             zipAlignEnabled true
+            signingConfig signingConfigs.config
         }
     }
-
     dexOptions {
         maxProcessCount 4
         javaMaxHeapSize "2g"
     }
-
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
@@ -67,8 +68,7 @@ def supportLibraryVersion = '27.0.2'
 def gcmVersion = '11.6.2'
 
 dependencies {
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
