--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,8 +86,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'jp.wasabeef:glide-transformations:2.0.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -102,6 +102,9 @@ dependencies {
     implementation 'com.robinhood.ticker:ticker:1.1.1'
     implementation 'com.android.support:multidex:1.0.2'
     implementation 'joda-time:joda-time:2.9.4'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.6.13'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.7'
+    //implementation 'uk.co.lucasweb:aws-v4-signer-java:1.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     testCompile 'junit:junit:4.12'
 }
