--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         }
     }
     compileSdkVersion 27
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "cenergy.central.com.powerbuy_store"
         minSdkVersion 15
@@ -67,8 +67,8 @@ def supportLibraryVersion = '27.0.2'
 def gcmVersion = '11.6.2'
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -106,7 +106,7 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-s3:2.6.7'
     //implementation 'uk.co.lucasweb:aws-v4-signer-java:1.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 configurations.all {
