--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'realm-android'
 
 android {
@@ -65,6 +66,7 @@ android {
 
 def supportLibraryVersion = '27.0.2'
 def gcmVersion = '11.6.2'
+def kotlin_version = '1.2.60'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -107,6 +109,7 @@ dependencies {
     //implementation 'uk.co.lucasweb:aws-v4-signer-java:1.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 configurations.all {
@@ -118,4 +121,7 @@ configurations.all {
             }
         }
     }
+}
+repositories {
+    mavenCentral()
 }
