--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,7 +108,7 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-core:2.6.13'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.6.7'
     //implementation 'uk.co.lucasweb:aws-v4-signer-java:1.3'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    kapt 'com.jakewharton:butterknife-compiler:8.6.0'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
