--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.25.4'
     }
 }
 apply plugin: 'com.android.application'
@@ -28,16 +28,13 @@ android {
         applicationId "cenergy.central.com.powerbuy_store"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        flavorDimensions "mode"
 
         multiDexEnabled true
     }
     buildTypes {
         debug {
-            resValue 'string', 'app_name', '\"PowerBuy Store-Dev\"'
-            applicationIdSuffix ".dev"
             versionNameSuffix "-DEBUG"
             ext.alwaysUpdateBuildId = false
         }
@@ -55,7 +52,6 @@ android {
         }
         release {
             signingConfig signingConfigs.config
-            resValue 'string', 'app_name', '\"PowerBuy Store\"'
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -66,6 +62,22 @@ android {
             zipAlignEnabled true
         }
     }
+
+    productFlavors {
+        production {
+            resValue 'string', 'app_name', '\"PowerBuy Store\"'
+            versionCode 1
+            versionName "1.0"
+        }
+
+        develop {
+            resValue 'string', 'app_name', '\"PowerBuy Store-Dev\"'
+            applicationIdSuffix ".dev"
+            versionCode 1
+            versionName "1.0.0"
+        }
+    }
+
     dexOptions {
         maxProcessCount 4
         javaMaxHeapSize "2g"
