--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,23 +53,23 @@ android {
 
     productFlavors {
         production {
-            resValue 'string', 'app_name', '\"PowerBuy Store\"'
+            manifestPlaceholders = [applicationLabel: "@string/app_name"]
             versionCode 1
             versionName "1.0"
         }
 
         staging {
-            resValue 'string', 'app_name', '\"PowerBuy Store-Staging\"'
+            manifestPlaceholders = [applicationLabel: "PowerBuy Staging"]
             applicationIdSuffix ".staging"
             versionCode 1
             versionName "0.0.1"
         }
 
         develop {
-            resValue 'string', 'app_name', '\"PowerBuy Store-Dev\"'
+            manifestPlaceholders = [applicationLabel: "PowerBuy Dev"]
             applicationIdSuffix ".dev"
-            versionCode 7
-            versionName "0.0.3"
+            versionCode 8
+            versionName "0.0.4"
         }
     }
 
