--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="cenergy.central.com.pwb_store">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="cenergy.central.com.pwb_store">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -12,11 +13,13 @@
 
     <application
         android:name=".PowerBuyStoreApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_logo"
-        android:label="@string/app_name"
+        android:label="${applicationLabel}"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:allowBackup,android:label">
+
         <activity android:name="cenergy.central.com.pwb_store.activity.SplashScreenActivity"
                   android:label="@string/app_name"
                   android:theme="@style/SplashTheme">
