--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,7 +129,8 @@ dependencies {
     kapt 'com.jakewharton:butterknife-compiler:8.6.0'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
+    //date picker
+    implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
     // fabric
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
         transitive = true;
