--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,10 @@ android {
 
     productFlavors {
         production {
-            manifestPlaceholders = [applicationLabel: "@string/app_name"]
+            manifestPlaceholders = [applicationLabel: "PowerBuy Store"]
+            resValue 'string', 'app_name', '\"PoweBuy Store\"'
             versionCode 1
-            versionName "1.0"
+            versionName "1.0.0-dev"
         }
 
         staging {
