--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,10 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 26
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         flavorDimensions "version"
         multiDexEnabled true
@@ -115,12 +114,9 @@ android {
         maxProcessCount 4
         javaMaxHeapSize "2g"
     }
-    configurations.all {
-        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
-    }
 }
 
-def supportLibraryVersion = '27.0.2'
+def supportLibraryVersion = '28.0.0'
 def gcmVersion = '11.6.2'
 def kotlin_version = '1.2.60'
 
@@ -134,21 +130,19 @@ dependencies {
     implementation "com.android.support:cardview-v7:$supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
     implementation "com.android.support:design:$supportLibraryVersion"
-    implementation 'com.android.support:support-annotations:27.0.2'
+    implementation "com.android.support:support-annotations:$supportLibraryVersion"
     implementation "com.android.support:customtabs:$supportLibraryVersion"
     implementation "com.android.support:percent:$supportLibraryVersion"
-    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation "com.google.android.gms:play-services-gcm:$gcmVersion"
-    implementation "com.google.android.gms:play-services-vision:$gcmVersion"
-    implementation 'com.google.guava:guava:23.3-android'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'jp.wasabeef:glide-transformations:2.0.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.scottyab:secure-preferences-lib:0.1.4'
     implementation 'com.mcxiaoke.viewpagerindicator:library:2.4.1'
     implementation 'com.pacioianu.david:ink-page-indicator:1.2.0'
@@ -169,7 +163,7 @@ dependencies {
     implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
     // fabric
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
-        transitive = true;
+        transitive = true
     }
 }
 
