--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,11 @@ android {
         maxProcessCount 4
         javaMaxHeapSize "2g"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 def supportLibraryVersion = '28.0.0'
