--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,13 @@ android {
             versionCode 1
             versionName "0.0.1"
         }
+
+        rbs {
+            applicationId "cenergy.central.com.eordering.rbs"
+            manifestPlaceholders = [applicationLabel: "@string/app_name"]
+            versionCode 1
+            versionName "0.0.1"
+        }
     }
 
     dexOptions {
