--- a/app/build.gradle
+++ b/app/build.gradle
@@ -177,6 +177,8 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
         transitive = true
     }
+    // Rating
+    implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
 }
 
 configurations.all {
