fixed staging debug false

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            debuggable true // Set false when singed new apk
+            debuggable false // Set false when singed new apk
             jniDebuggable false
             renderscriptDebuggable false
             renderscriptOptimLevel 3
