setup product flavors for PWB OmniTv

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
         }
     }
     compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    buildToolsVersion '29.0.3'
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
@@ -105,17 +105,24 @@ android {
             versionName "1.2.0"
         }
 
+        pwbOmniTv {
+            applicationId "cenergy.central.com.eordering.pwb_omni_tv"
+            manifestPlaceholders = [applicationLabel: "@string/app_name"]
+            versionCode 1
+            versionName "0.0.1"
+        }
+
         cds {
             applicationId "cenergy.central.com.eordering.cds"
             manifestPlaceholders = [applicationLabel: "@string/app_name"]
-            versionCode 94
+            versionCode 113
             versionName "1.2.0"
         }
 
         rbs {
             applicationId "cenergy.central.com.eordering.rbs"
             manifestPlaceholders = [applicationLabel: "@string/app_name"]
-            versionCode 94
+            versionCode 113
             versionName "1.2.0"
         }
     }
